Add live_state field in response
