# e2e/specs/games/game_swagger.json
@@ -206,6 +206,10 @@
           "type": "boolean",
           "description": "Mark if the game is finished."
         },
+        "live_state": {
+          "type": "string",
+          "description": "Live state of the game, it could be 'not_started', 'in_progress', 'finished'"
+        },
         "updated_at": {
           "type": "string",
           "format": "datetime",
